--- a/admin/view/template/sale/order_invoice.twig
+++ b/admin/view/template/sale/order_invoice.twig
@@ -48,15 +48,15 @@
     <table class="table table-bordered">
       <thead>
         <tr>
-          <td style="width: 50%;"><b>{{ text_payment_address }}</b></td>
-          <td style="width: 50%;"><b>{{ text_shipping_address }}</b></td>
+          <!--<td style="width: 50%;"><b>{{ text_payment_address }}</b></td>-->
+          <td style="width: 100%;"><b>{{ text_shipping_address }}</b></td>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td><address>
+          <!--<td><address>
             {{ order.payment_address }}
-            </address></td>
+            </address></td>-->
           <td><address>
             {{ order.shipping_address }}
             </address></td>
