--- a/catalog/view/theme/default/template/extension/payment/cod.twig
+++ b/catalog/view/theme/default/template/extension/payment/cod.twig
@@ -1,3 +1,8 @@
+<h2>{{ text_instruction }}</h2>
+<div class="well well-sm">
+  <p><b>{{ text_address }}</b></p>
+  <p>{{ text_payment }}</p>
+</div>
 <div class="buttons">
   <div class="pull-right">
     <input type="button" value="{{ button_confirm }}" id="button-confirm" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
