--- a/catalog/view/theme/default/template/checkout/guest.twig
+++ b/catalog/view/theme/default/template/checkout/guest.twig
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-sm-12">
     <fieldset id="account">
       <legend>{{ text_your_details }}</legend>
       <div class="form-group" style="display: {% if customer_groups|length > 1 %} block {% else %} none {% endif %};">
@@ -148,7 +148,7 @@
       {% endfor %}
     </fieldset>
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-6" style="display: none;">
     <fieldset id="address">
       <legend>{{ text_your_address }}</legend>
       <div class="form-group">
@@ -316,9 +316,10 @@
     {{ captcha }} </div>
 </div>
 {% if shipping_required %}
-<div class="checkbox">
+<div class="checkbox" style="display: none;">
   <label> {% if shipping_address %}
-    <input type="checkbox" name="shipping_address" value="1" checked="checked" />
+    <!--<input type="checkbox" name="shipping_address" value="1" checked="checked" />-->
+    <input type="checkbox" name="shipping_address" value="1" />
     {% else %}
     <input type="checkbox" name="shipping_address" value="1" />
     {% endif %}
