--- a/catalog/view/theme/default/template/checkout/guest_shipping.twig
+++ b/catalog/view/theme/default/template/checkout/guest_shipping.twig
@@ -1,17 +1,17 @@
 <form class="form-horizontal">
-  <div class="form-group required">
+  <div class="form-group required" style="display: none;">
     <label class="col-sm-2 control-label" for="input-shipping-firstname">{{ entry_firstname }}</label>
     <div class="col-sm-10">
       <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-shipping-firstname" class="form-control" />
     </div>
   </div>
-  <div class="form-group required">
+  <div class="form-group required" style="display: none;">
     <label class="col-sm-2 control-label" for="input-shipping-lastname">{{ entry_lastname }}</label>
     <div class="col-sm-10">
       <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-shipping-lastname" class="form-control" />
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group" style="display: none;">
     <label class="col-sm-2 control-label" for="input-shipping-company">{{ entry_company }}</label>
     <div class="col-sm-10">
       <input type="text" name="company" value="{{ company }}" placeholder="{{ entry_company }}" id="input-shipping-company" class="form-control" />
@@ -23,7 +23,7 @@
       <input type="text" name="address_1" value="{{ address_1 }}" placeholder="{{ entry_address_1 }}" id="input-shipping-address-1" class="form-control" />
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group" style="display: none;">
     <label class="col-sm-2 control-label" for="input-shipping-address-2">{{ entry_address_2 }}</label>
     <div class="col-sm-10">
       <input type="text" name="address_2" value="{{ address_2 }}" placeholder="{{ entry_address_2 }}" id="input-shipping-address-2" class="form-control" />
