--- a/catalog/view/theme/default/template/checkout/shipping_method.twig
+++ b/catalog/view/theme/default/template/checkout/shipping_method.twig
@@ -4,7 +4,6 @@
 {% if shipping_methods %}
 <p>{{ text_shipping_method }}</p>
 {% for shipping_method in shipping_methods %}
-<p><strong>{{ shipping_method.title }}</strong></p>
 {% if not shipping_method.error %}
 {% for quote in shipping_method.quote %}
 <div class="radio">
@@ -14,7 +13,7 @@
     {% else %}
     <input type="radio" name="shipping_method" value="{{ quote.code }}" />
     {% endif %}
-    {{ quote.title }} - {{ quote.text }}</label>
+    {{ quote.title }}</label>
 </div>
 {% endfor %}
 {% else %}
