--- a/catalog/view/theme/default/template/extension/payment/cheque.twig
+++ b/catalog/view/theme/default/template/extension/payment/cheque.twig
@@ -1,9 +1,6 @@
 <h2>{{ text_instruction }}</h2>
 <div class="well well-sm">
-  <p><b>{{ text_payable }}</b></p>
-  <p>{{ payable }}</p>
-  <b>{{ text_address }}</b><br />
-  <p>{{ address }}</p>
+  <p><b>{{ text_address }}</b></p>
   <p>{{ text_payment }}</p>
 </div>
 <div class="buttons">
