--- a/catalog/view/theme/default/template/product/search.twig
+++ b/catalog/view/theme/default/template/product/search.twig
@@ -46,25 +46,27 @@
             {% endfor %}
           </select>
         </div>
-        <div class="col-sm-3">
-          <label class="checkbox-inline">
-            {% if sub_category %}
-            <input type="checkbox" name="sub_category" value="1" checked="checked" />
-            {% else %}
-            <input type="checkbox" name="sub_category" value="1" />
-            {% endif %}
-            {{ text_sub_category }}</label>
-        </div>
       </div>
-      <p>
-        <label class="checkbox-inline">
-          {% if description %}
-          <input type="checkbox" name="description" value="1" id="description" checked="checked" />
-          {% else %}
-          <input type="checkbox" name="description" value="1" id="description" />
-          {% endif %}
-          {{ entry_description }}</label>
-      </p>
+      <div class="row">
+          <div class="col-sm-4">
+              <label class="checkbox-inline">
+                  {% if description %}
+                  <input type="checkbox" name="description" value="1" id="description" checked="checked" />
+                  {% else %}
+                  <input type="checkbox" name="description" value="1" id="description" />
+                  {% endif %}
+                  {{ entry_description }}</label>
+          </div>
+          <div class="col-sm-3">
+              <label class="checkbox-inline">
+                {% if sub_category %}
+                <input type="checkbox" name="sub_category" value="1" checked="checked" />
+                {% else %}
+                <input type="checkbox" name="sub_category" value="1" />
+                {% endif %}
+                {{ text_sub_category }}</label>
+          </div>
+      </div>
       <input type="button" value="{{ button_search }}" id="button-search" class="btn btn-primary" />
       <h2>{{ text_search }}</h2>
       {% if products %}
