--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -128,6 +128,14 @@ div.required .control-label:before {
 #logo {
 	margin: 0 0 10px 0;
 }
+.title-logo {
+    margin: 0;
+    display: inline-block;
+    line-height: 50px;
+}
+.logo-img {
+    float: left;
+}
 /* search */
 #search {
 	margin-bottom: 10px;
