--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -127,6 +127,7 @@ div.required .control-label:before {
 /* logo */
 #logo {
 	margin: 0 0 10px 0;
+    text-align: center;
 }
 .title-logo {
     margin: 0;
@@ -134,7 +135,7 @@ div.required .control-label:before {
     line-height: 50px;
 }
 .logo-img {
-    float: left;
+    display: inline-block;
 }
 /* search */
 #search {
@@ -736,6 +737,13 @@ h2.price {
        width: 100%;
     }
 }
+
+@media (max-width: 768px) {
+    .header-info {
+        text-align: center;
+    }
+}
+
 
 /* fixed product layouts used in left and right columns */
 #column-left .product-layout, #column-right .product-layout {
