Header info back.

--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -69,7 +69,7 @@
       </div>
       <div class="col-sm-5">{{ search }}</div>
       <div class="col-sm-3">{{ cart }}</div>
-      <!--{{ header_store_info }}-->
+      {{ header_store_info }}
     </div>
   </div>
 </header>
