14-logo-header: added text logo. Columns fix of store info.

--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -137,6 +137,12 @@ div.required .control-label:before {
 .logo-img {
     display: inline-block;
 }
+.text_logo_bottom {
+    color: rgb(0, 108, 174);
+    font-size: 14px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
 /* search */
 #search {
 	margin-bottom: 10px;
