--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -53,23 +53,28 @@
 <header>
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-md-4">
         <div id="logo">
           {% if logo %}
             <div>
               <a href="{{ home }}" class="logo-img"><img src="{{ logo }}" title="{{ name }}" alt="{{ name }}" class="img-responsive" /></a>
             </div>
           {% endif %}
-          {% if logo_txt %}
+          {% if logo_bottom %}
             <div>
-              <a href="{{ home }}" class="logo-img"><img src="{{ logo_txt }}" title="{{ name }}" alt="{{ name }}" class="img-responsive" /></a>
+              <a href="{{ home }}" class="logo-img"><img src="{{ logo_bottom }}" title="{{ name }}" alt="{{ name }}" class="img-responsive" /></a>
             </div>
           {% endif %}
-        </div>
+          <p class="text_logo_bottom">{{ text_logo_bottom }}</p>
       </div>
-      <div class="col-sm-5">{{ search }}</div>
-      <div class="col-sm-3">{{ cart }}</div>
-      {{ header_store_info }}
+    </div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-7">{{ search }}</div>
+        <div class="col-md-5">{{ cart }}</div>
+        </div>
+        <div class="row">{{ header_store_info }}</div>
+      </div>
     </div>
   </div>
 </header>
