17-robots-etc : initial setup.

--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -9,6 +9,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="google-site-verification" content="qUy4C9_uef67WWV6GIIdyIz-V7fU5YfplKL2L5D3rsk" />
 <title>{{ title }}</title>
 <base href="{{ base }}" />
 {% if description %}
