--- a/catalog/view/theme/default/template/checkout/guest.twig
+++ b/catalog/view/theme/default/template/checkout/guest.twig
@@ -370,8 +370,10 @@ $('#address .form-group[data-sort]').detach().each(function() {
 });
 
 $('#collapse-payment-address input[name=\'customer_group_id\']').on('change', function() {
+    var langCode = $('#currentLanguage').attr('value');
+
 	$.ajax({
-		url: 'index.php?route=checkout/checkout/customfield&customer_group_id=' + this.value,
+		url: 'index.php?route=checkout/checkout/customfield&customer_group_id=' + this.value + '&lang=' + langCode,
 		dataType: 'json',
 		success: function(json) {
 			$('#collapse-payment-address .custom-field').hide();
@@ -469,8 +471,10 @@ $('.datetime').datetimepicker({
 //--></script> 
 <script type="text/javascript"><!--
 $('#collapse-payment-address select[name=\'country_id\']').on('change', function() {
+    var langCode = $('#currentLanguage').attr('value');
+    
 	$.ajax({
-		url: 'index.php?route=checkout/checkout/country&country_id=' + this.value,
+		url: 'index.php?route=checkout/checkout/country&country_id=' + this.value + '&lang=' + langCode,
 		dataType: 'json',
 		beforeSend: function() {
 			$('#collapse-payment-address select[name=\'country_id\']').prop('disabled', true);
