--- a/catalog/view/theme/default/template/extension/payment/cod.twig
+++ b/catalog/view/theme/default/template/extension/payment/cod.twig
@@ -11,7 +11,7 @@
 <script type="text/javascript"><!--
 $('#button-confirm').on('click', function() {
 	$.ajax({
-		url: 'index.php?route=extension/payment/cod/confirm',
+		url: 'index.php?route=extension/payment/cod/confirm' + '&lang=' + $('#currentLanguage').attr('value'),
 		dataType: 'json',
 		beforeSend: function() {
 			$('#button-confirm').button('loading');
