--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -377,8 +377,10 @@ $('select[name=\'recurring_id\'], input[name="quantity"]').change(function(){
 //--></script> 
 <script type="text/javascript"><!--
 $('#button-cart').on('click', function() {
+    var langCode = $('#currentLanguage').attr('value');
+    
 	$.ajax({
-		url: 'index.php?route=checkout/cart/add',
+		url: 'index.php?route=checkout/cart/add' + '&lang=' + langCode,
 		type: 'post',
 		data: $('#product input[type=\'text\'], #product input[type=\'hidden\'], #product input[type=\'radio\']:checked, #product input[type=\'checkbox\']:checked, #product select, #product textarea'),
 		dataType: 'json',
@@ -420,7 +422,7 @@ $('#button-cart').on('click', function() {
 
 				$('html, body').animate({ scrollTop: 0 }, 'slow');
 
-				$('#cart > ul').load('index.php?route=common/cart/info ul li');
+				$('#cart > ul').load('index.php?route=common/cart/info' + '&lang=' + langCode + ' ul li');
 			}
 		},
         error: function(xhr, ajaxOptions, thrownError) {
